tests/ui/traits/normalize-conflicting-impls.stderr
error[E0220]: associated type `Value` not found for `R`
  --> $DIR/normalize-conflicting-impls.rs:10:8
   |
LL |     R::Value: DimName,
   |        ^^^^^ associated type `Value` not found

error[E0119]: conflicting implementations of trait `Allocator<_, ()>` for type `DefaultAllocator`
  --> $DIR/normalize-conflicting-impls.rs:14:1
   |
LL | / impl<N, R> Allocator<N, R> for DefaultAllocator
LL | | where
LL | |     R::Value: DimName,
   | |______________________- first implementation here
...
LL |   impl<N> Allocator<N, ()> for DefaultAllocator {}
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `DefaultAllocator`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0119, E0220.
For more information about an error, try `rustc --explain E0119`.
